# rust-ffmepg

./: .gitignore  Cargo.toml  build.rs
c-lib/: double.c
src/: main.rs
