[package]
name = "rust-ffmepg"
version = "0.1.0"
authors = ["zhushijie.jayson <zhushijie.jayson@bytedance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
libc = "0.2"
ffmpeg = "0.3.0"

[build-dependencies]
cc = "1.0"